<resources>
    <string name="app_name">CPUT_CafeteriaApp</string>
    <string name="home_page">Home page</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO1</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="navOpen">Open</string>
    <string name="navClose">Close</string>
    <string name="forgot_password_underlined"><u>Forgot Password?</u></string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_password_details">Change your password by entering a new one</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_password">New Password</string>
    <string name="change_password">Change Password</string>
    <string name="back_underlined"><u>Back</u></string>
    <string name="sign_in_underlined"><u>Sign in</u></string>
    <string name="supper">Supper</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update_password_details">Update Password Details</string>

    <string-array name="quantity_string_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5(Max)</item>
    </string-array>
</resources>